crates/simplexpr/src/snapshots/simplexpr__tests__test-11.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"hi[\\\"ho\\\"]\"))"

---
Ok(
    hi["ho"],
)
