crates/simplexpr/src/snapshots/simplexpr__tests__test-12.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"foo.bar.baz\"))"

---
Ok(
    foo["bar"]["baz"],
)
