crates/simplexpr/src/snapshots/simplexpr__tests__test-13.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"foo.bar[2 + 2] * asdf[foo.bar]\"))"

---
Ok(
    (foo["bar"][("2" + "2")] * asdf[foo["bar"]]),
)
