crates/simplexpr/src/snapshots/simplexpr__tests__test-20.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"\\\"foo\\\" + 12.4\"))"

---
Ok(
    BinOp(
        Literal(
            "foo",
        ),
        Plus,
        Literal(
            "12.4",
        ),
    ),
)
