crates/simplexpr/src/snapshots/simplexpr__tests__test-22.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"hi[\\\"ho\\\"]\"))"

---
Ok(
    JsonAccess(
        VarRef(
            "hi",
        ),
        Literal(
            "ho",
        ),
    ),
)
