crates/simplexpr/src/snapshots/simplexpr__tests__test-24.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"foo.bar.baz\"))"

---
Ok(
    JsonAccess(
        JsonAccess(
            VarRef(
                "foo",
            ),
            Literal(
                "bar",
            ),
        ),
        Literal(
            "baz",
        ),
    ),
)
