crates/simplexpr/src/snapshots/simplexpr__tests__test-3.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"2 * 5 + 1 * 1 + 3\"))"

---
Ok(
    ((("2" * "5") + ("1" * "1")) + "3"),
)
