crates/simplexpr/src/snapshots/simplexpr__tests__test-4.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"(1 + 2) * 2\"))"

---
Ok(
    (("1" + "2") * "2"),
)
