crates/simplexpr/src/snapshots/simplexpr__tests__test-6.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"1 + true ? 2 : 5 + 2\"))"

---
Ok(
    (if ("1" + "true") then "2" else ("5" + "2")),
)
