crates/simplexpr/src/snapshots/simplexpr__tests__test-7.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"1 + (true ? 2 : 5) + 2\"))"

---
Ok(
    (("1" + (if "true" then "2" else "5")) + "2"),
)
