crates/simplexpr/src/snapshots/simplexpr__tests__test-9.snap
---
source: src/lib.rs
expression: "p.parse(Lexer::new(\"! false || ! true\"))"

---
Ok(
    (!"false" || !"true"),
)
